assignment for jun14

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
   <main>
-    <h1>H1　タイトル</h1>
+    <h1>画像表示</h1>
 
     <br>
     <br>
@@ -34,7 +34,9 @@
 
       <div id="js_container">
         <p>"</p>
+        <button onclick="runpersec()">何が出るかな？</button>
         <strong><p  style="color:blue" id="js2">The JS text here</p></strong>
+        <p id="hidden_mssg"></p>
         <p>"</p>
       </div>
 
@@ -59,7 +61,8 @@
       画像をJSで表示するのは３０分ぐらい <br>
       テキストを消して、画像だけを表示するのに３０分 <br>
       合計１時間ぐらい消費 <br>
-      13/06/2020
+      13/06/2020 <br>
+      02:51 --- 03:17
     </p>
 
     <br>
@@ -93,7 +96,7 @@
 
 
 
-    <hr></hr>
+    <!-- <hr></hr>
 
     <br>
 
@@ -144,7 +147,7 @@
       <strong>
         <a href="https://www.linkedin.com/learning/instructors/morten-rand-hendriksen?trk=embed_lil">Morten Rand-Hendriksen</a>
       </strong>
-    </p>
+    </p> -->
     
   </main>
 </body>
