--- a/contents/js004.html
+++ b/contents/js004.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>H: GitHub page Practice-2</title>
+  <title>H: GitHub page Practice-4</title>
   <script type="text/javascript" src="../js/js004.js" defer></script>
 </head>
 
@@ -20,15 +20,8 @@
     <br>
 
     <p>--------------------</p>
-    <h3 id="js_title">JS-002 & 003</h3>
+    <h3 id="js_title">JS-004 & 005 </h3>
     <p>--------------------</p>
-
-    <br>
-
-    <p id="demo1"></p>
-    <p id="demo2"></p>
-    <p id="demo3"></p>
-    <p id="demo4"></p>
 
     <br>
 
@@ -39,11 +32,30 @@
     <p>
       js pre-code
 
+      <p id="demo1"></p>
+      <p id="demo2"></p>
+      <p id="demo3"></p>
+      <p id="demo4"></p>
+  
+      <br>
+
       <div id="js_container">
         <p>"</p>
         <button onclick="runpersec()">何が出るかな？</button>
-        <strong><p  style="color:blue" id="js2">The JS text here</p></strong>
+        <strong>
+          <p style="color:blue" id="js2">The JS text here</p>
+        </strong>
         <p id="hidden_mssg"></p>
+        <p>"</p>
+      </div>
+
+      <div id="js_container">
+        <p>"</p>
+        <button onclick="runpersec2()">連続</button>
+        <strong>
+          <p style="color:blue" id="js3">The JS text here</p>
+        </strong>
+        <p id="hidden_mssg2"></p>
         <p>"</p>
       </div>
 
@@ -80,6 +92,27 @@
       詳しいコードは <br>
       js004.jsを見て下さい <br>
       15/06/2020 <br>
+      <br>
+    </p>
+
+    <p>.</p>
+    <br>
+
+    <p>
+      第五回 <br>
+      ブログの骨組みは <br>
+      既に構築しているので <br>
+      1分で終了 <br>
+      
+      <br>
+      格闘すること３時間 <br>
+      無事解決 <br>
+      <br>
+      問題はcontents/images/xxxだったので <br>
+      それを自動で../images/xxxにする仕組みを構築 <br>
+      詳しいコードは <br>
+      js004.jsを見て下さい <br>
+      16/06/2020 <br>
       <br>
     </p>
 
