--- a/contents/js006.html
+++ b/contents/js006.html
@@ -39,7 +39,8 @@
         <br>
 
         <div id="js_container">
-          <!-- <p>"</p> -->
+          <p>NEKOボタンを押してみよう！</p>
+          <p>&#x2b07;</p>
           <button onclick="timeout()">NEKO</button>
           <strong>
             <p style="color:blue" id="cat">The JS text here</p>
@@ -69,7 +70,8 @@
         <br>
 
         <div id="js_container">
-          <!-- <p>"</p> -->
+          <p>INUUボタンを押してみよう！</p>
+          <p>&#x2b07;</p>
           <button onclick="runpersec_dog()">INUU</button>
           <strong>
             <p style="color:blue" id="dog">The JS text here</p>
